@@ -1,3 +1,12 @@
+2008-01-16  Bram de Greve <bram.degreve@bramz.net>
+
+	* shapefil.h, safileio.c:  add file hooks that accept UTF-8
+	encoded filenames on some platforms.  Use SASetupUtf8Hooks
+	to setup the hooks and check SHPAPI_UTF8_HOOKS for its
+	availability.  Currently, this is only available on the Windows
+	platform that decodes the UTF-8 filenames to wide character 
+	strings and feed them to _wfopen and _wremove.
+	
 2008-01-10  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* shapefil.h: Avoid _ prefix on #defines.
